// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListingCard> renders 1`] = `
<View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "width": 168,
        },
      ]
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="none"
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#cdd2d4",
            },
            Object {
              "borderRadius": 3,
            },
            Object {
              "width": 168,
            },
            null,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="center"
            style={
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 8,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 3,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#cdd2d4",
              "height": 0,
              "opacity": 0,
              "width": 0,
              "zIndex": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 8,
        }
      }
    />
  </View>
</View>
`;

exports[`<ListingCard> when {category} 1`] = `
<View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "width": 168,
        },
      ]
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="none"
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#cdd2d4",
            },
            Object {
              "borderRadius": 3,
            },
            Object {
              "width": 168,
            },
            null,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="center"
            style={
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 8,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 3,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#cdd2d4",
              "height": 0,
              "opacity": 0,
              "width": 0,
              "zIndex": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 8,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 18,
            },
            Object {
              "color": "#707070",
            },
            Object {},
          ]
        }
      >
        Hello world
      </Text>
    </View>
  </View>
</View>
`;

exports[`<ListingCard> when {children} 1`] = `
<View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "width": 168,
        },
      ]
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="none"
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#cdd2d4",
            },
            Object {
              "borderRadius": 3,
            },
            Object {
              "width": 168,
            },
            null,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="center"
            style={
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 8,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 3,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#cdd2d4",
              "height": 0,
              "opacity": 0,
              "width": 0,
              "zIndex": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignSelf": "flex-start",
            "marginHorizontal": 0,
          }
        }
      >
        <View
          accessible={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="none"
          style={
            Array [
              undefined,
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "borderRadius": 24,
                },
                false,
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "borderRadius": 3,
                  "justifyContent": "center",
                },
                Object {
                  "height": 44,
                  "minWidth": 44,
                  "paddingHorizontal": 28,
                },
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
                Object {
                  "height": 28,
                  "minWidth": 28,
                  "paddingHorizontal": 8,
                },
                false,
                false,
                Object {
                  "borderRadius": 24,
                },
                false,
                Object {
                  "backgroundColor": "#707070",
                },
                false,
                false,
                false,
                false,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#4a4a4a",
                      "fontFamily": undefined,
                      "fontWeight": "400",
                      "textAlignVertical": "center",
                    },
                    Object {
                      "fontSize": 16,
                      "lineHeight": 30,
                    },
                    false,
                    Object {
                      "color": "#ffffff",
                      "fontFamily": undefined,
                      "fontSize": 14,
                      "fontWeight": "600",
                      "letterSpacing": -0.15,
                    },
                  ]
                }
              >
                15 Actividades
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "borderRadius": 22,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ListingCard> when {description} 1`] = `
<View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "width": 168,
        },
      ]
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="none"
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#cdd2d4",
            },
            Object {
              "borderRadius": 3,
            },
            Object {
              "width": 168,
            },
            null,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="center"
            style={
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 8,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 3,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#cdd2d4",
              "height": 0,
              "opacity": 0,
              "width": 0,
              "zIndex": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 8,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={3}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontSize": 14,
              "lineHeight": 18,
            },
            Object {
              "color": "#707070",
            },
            Object {},
          ]
        }
      >
        Hello world
      </Text>
    </View>
  </View>
</View>
`;

exports[`<ListingCard> when {image} 1`] = `
<View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "width": 168,
        },
      ]
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="none"
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#cdd2d4",
            },
            Object {
              "borderRadius": 3,
            },
            Object {
              "width": 168,
            },
            null,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="cover"
            source={
              Object {
                "uri": "https://picsum.photos/320/200/?random",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 8,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 3,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#cdd2d4",
              "height": 0,
              "opacity": 0,
              "width": 0,
              "zIndex": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 8,
        }
      }
    />
  </View>
</View>
`;

exports[`<ListingCard> when {rating} 1`] = `
<View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "width": 168,
        },
      ]
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="none"
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#cdd2d4",
            },
            Object {
              "borderRadius": 3,
            },
            Object {
              "width": 168,
            },
            null,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="center"
            style={
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 8,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 3,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#cdd2d4",
              "height": 0,
              "opacity": 0,
              "width": 0,
              "zIndex": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 16,
                "lineHeight": 30,
              },
              false,
              Object {
                "marginBottom": 4,
                "marginRight": 8,
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 16,
                "lineHeight": 30,
              },
              false,
              Object {
                "marginBottom": 4,
                "marginRight": 8,
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 16,
                "lineHeight": 30,
              },
              false,
              Object {
                "marginBottom": 4,
                "marginRight": 8,
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 16,
                "lineHeight": 30,
              },
              false,
              Object {
                "marginBottom": 4,
                "marginRight": 8,
              },
            ]
          }
        >
          ★
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 16,
                "lineHeight": 30,
              },
              false,
              Object {
                "marginBottom": 4,
                "marginRight": 8,
              },
            ]
          }
        >
          ☆
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
                "fontWeight": "400",
                "textAlignVertical": "center",
              },
              Object {
                "fontSize": 14,
                "lineHeight": 18,
              },
              false,
              Object {
                "marginBottom": 4,
              },
            ]
          }
        >
           (12)
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<ListingCard> when {styleContainer} 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#10c0bc",
      "paddingTop": 8,
    }
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "width": 168,
        },
      ]
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="none"
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#cdd2d4",
            },
            Object {
              "borderRadius": 3,
            },
            Object {
              "width": 168,
            },
            null,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="center"
            style={
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 8,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 3,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#cdd2d4",
              "height": 0,
              "opacity": 0,
              "width": 0,
              "zIndex": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 8,
        }
      }
    />
  </View>
</View>
`;

exports[`<ListingCard> when {title} 1`] = `
<View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "width": 168,
        },
      ]
    }
  >
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="none"
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#cdd2d4",
            },
            Object {
              "borderRadius": 3,
            },
            Object {
              "width": 168,
            },
            null,
            undefined,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignContent": "center",
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "justifyContent": "center",
              },
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ],
            ]
          }
        >
          <Image
            onLoad={[Function]}
            resizeMode="center"
            style={
              Array [
                Object {
                  "borderRadius": 3,
                },
                Object {
                  "opacity": 0.8,
                },
                Object {
                  "width": 168,
                },
                Object {
                  "height": 190,
                },
                false,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#cdd2d4",
                  "minHeight": 10,
                  "minWidth": 10,
                },
                Object {
                  "height": "100%",
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": "100%",
                  "opacity": 0,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          pointerEvents="none"
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "alignSelf": "center",
              "height": "100%",
              "justifyContent": "center",
              "left": 0,
              "padding": 8,
              "position": "absolute",
              "width": "100%",
            }
          }
        >
          <View />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 3,
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#cdd2d4",
              "height": 0,
              "opacity": 0,
              "width": 0,
              "zIndex": 0,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingVertical": 8,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
              "fontWeight": "400",
              "textAlignVertical": "center",
            },
            Object {
              "fontFamily": undefined,
              "fontSize": 14,
              "fontWeight": "600",
              "lineHeight": 16,
            },
            false,
            Object {
              "marginVertical": 4,
            },
          ]
        }
      >
        Hello world
      </Text>
    </View>
  </View>
</View>
`;
